mypl/gen/goTolangParser.py
# Generated from C:/Users/NaTsuu/pl\goTolang.g4 by ANTLR 4.11.1
# encoding: utf-8
import sys

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class goTolangParser(Parser):
    grammarFileName = "goTolang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "'goto'", "'goif'", "'{'", "'}'", "'goback'",
                    "'in'", "'is'", "'...'", "'None'", "<INVALID>", "'True'",
                    "'False'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                    "'if'", "'or'", "'and'", "'not'", "'pass'", "<INVALID>",
                    "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                    "<INVALID>", "<INVALID>", "<INVALID>", "'.'", "'*'",
                    "'('", "')'", "','", "':'", "';'", "'**'", "'='", "'['",
                    "']'", "'|'", "'^'", "'&'", "'<<'", "'>>'", "'+'",
                    "'-'", "'/'", "'%'", "'//'", "'~'", "'<'", "'>'", "'=='",
                    "'>='", "'<='", "'!='", "'@'", "'->'", "'<-'", "'+='",
                    "'-='", "'*='", "'/='", "'%='", "'&='", "'|='", "'^='",
                    "'<<='", "'>>='", "'**='", "'//='"]

    symbolicNames = ["<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "SKIP_", "BOOL_TRUE", "BOOL_FALSE",
                     "DECORATOR", "CHAR", "NUMBER", "INTEGER", "IF", "OR",
                     "AND", "NOT", "PASS", "NEWLINE", "NAME", "CHAR_LITERAL",
                     "DECIMAL_INTEGER", "OCT_INTEGER", "HEX_INTEGER", "BIN_INTEGER",
                     "FLOAT_NUMBER", "DOT", "STAR", "OPEN_PAREN", "CLOSE_PAREN",
                     "COMMA", "COLON", "SEMI_COLON", "POWER", "ASSIGN",
                     "OPEN_BRACK", "CLOSE_BRACK", "OR_OP", "XOR", "AND_OP",
                     "LEFT_SHIFT", "RIGHT_SHIFT", "ADD", "MINUS", "DIV",
                     "MOD", "IDIV", "NOT_OP", "LESS_THAN", "GREATER_THAN",
                     "EQUALS", "GT_EQ", "LT_EQ", "NOT_EQ_2", "AT", "ARROW",
                     "INV_ARROW", "ADD_ASSIGN", "SUB_ASSIGN", "MULT_ASSIGN",
                     "DIV_ASSIGN", "MOD_ASSIGN", "AND_ASSIGN", "OR_ASSIGN",
                     "XOR_ASSIGN", "LEFT_SHIFT_ASSIGN", "RIGHT_SHIFT_ASSIGN",
                     "POWER_ASSIGN", "IDIV_ASSIGN", "UNKNOWN_CHAR"]

    RULE_file_input = 0
    RULE_file_input_no_eof = 1
    RULE_stmt = 2
    RULE_simple_stmt = 3
    RULE_small_stmt = 4
    RULE_goto_stmt = 5
    RULE_label_stmt = 6
    RULE_expr_stmt = 7
    RULE_annassign = 8
    RULE_testlist_star_expr = 9
    RULE_augassign = 10
    RULE_pass_stmt = 11
    RULE_goback_stmt = 12
    RULE_if_stmt = 13
    RULE_suite = 14
    RULE_or_test = 15
    RULE_and_test = 16
    RULE_not_test = 17
    RULE_comparison = 18
    RULE_comp_op = 19
    RULE_star_expr = 20
    RULE_expr = 21
    RULE_xor_expr = 22
    RULE_and_expr = 23
    RULE_shift_expr = 24
    RULE_arith_expr = 25
    RULE_term = 26
    RULE_factor = 27
    RULE_power = 28
    RULE_atom_expr = 29
    RULE_atom = 30
    RULE_testlist_comp = 31
    RULE_trailer = 32
    RULE_subscriptlist = 33
    RULE_subscript = 34
    RULE_sliceop = 35
    RULE_exprlist = 36
    RULE_testlist = 37
    RULE_arglist = 38
    RULE_argument = 39

    ruleNames = ["file_input", "file_input_no_eof", "stmt", "simple_stmt",
                 "small_stmt", "goto_stmt", "label_stmt", "expr_stmt",
                 "annassign", "testlist_star_expr", "augassign", "pass_stmt",
                 "goback_stmt", "if_stmt", "suite", "or_test", "and_test",
                 "not_test", "comparison", "comp_op", "star_expr", "expr",
                 "xor_expr", "and_expr", "shift_expr", "arith_expr", "term",
                 "factor", "power", "atom_expr", "atom", "testlist_comp",
                 "trailer", "subscriptlist", "subscript", "sliceop", "exprlist",
                 "testlist", "arglist", "argument"]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    SKIP_ = 10
    BOOL_TRUE = 11
    BOOL_FALSE = 12
    DECORATOR = 13
    CHAR = 14
    NUMBER = 15
    INTEGER = 16
    IF = 17
    OR = 18
    AND = 19
    NOT = 20
    PASS = 21
    NEWLINE = 22
    NAME = 23
    CHAR_LITERAL = 24
    DECIMAL_INTEGER = 25
    OCT_INTEGER = 26
    HEX_INTEGER = 27
    BIN_INTEGER = 28
    FLOAT_NUMBER = 29
    DOT = 30
    STAR = 31
    OPEN_PAREN = 32
    CLOSE_PAREN = 33
    COMMA = 34
    COLON = 35
    SEMI_COLON = 36
    POWER = 37
    ASSIGN = 38
    OPEN_BRACK = 39
    CLOSE_BRACK = 40
    OR_OP = 41
    XOR = 42
    AND_OP = 43
    LEFT_SHIFT = 44
    RIGHT_SHIFT = 45
    ADD = 46
    MINUS = 47
    DIV = 48
    MOD = 49
    IDIV = 50
    NOT_OP = 51
    LESS_THAN = 52
    GREATER_THAN = 53
    EQUALS = 54
    GT_EQ = 55
    LT_EQ = 56
    NOT_EQ_2 = 57
    AT = 58
    ARROW = 59
    INV_ARROW = 60
    ADD_ASSIGN = 61
    SUB_ASSIGN = 62
    MULT_ASSIGN = 63
    DIV_ASSIGN = 64
    MOD_ASSIGN = 65
    AND_ASSIGN = 66
    OR_ASSIGN = 67
    XOR_ASSIGN = 68
    LEFT_SHIFT_ASSIGN = 69
    RIGHT_SHIFT_ASSIGN = 70
    POWER_ASSIGN = 71
    IDIV_ASSIGN = 72
    UNKNOWN_CHAR = 73

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class File_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def file_input_no_eof(self):
            return self.getTypedRuleContext(goTolangParser.File_input_no_eofContext, 0)

        def EOF(self):
            return self.getToken(goTolangParser.EOF, 0)

        def getRuleIndex(self):
            return goTolangParser.RULE_file_input

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFile_input"):
                listener.enterFile_input(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFile_input"):
                listener.exitFile_input(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFile_input"):
                return visitor.visitFile_input(self)
            else:
                return visitor.visitChildren(self)

    def file_input(self):

        localctx = goTolangParser.File_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_input)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.file_input_no_eof()
            self.state = 81
            self.match(goTolangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class File_input_no_eofContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i: int = None):
            if i is None:
                return self.getTokens(goTolangParser.NEWLINE)
            else:
                return self.getToken(goTolangParser.NEWLINE, i)

        def stmt(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(goTolangParser.StmtContext)
            else:
                return self.getTypedRuleContext(goTolangParser.StmtContext, i)

        def OPEN_BRACK(self, i: int = None):
            if i is None:
                return self.getTokens(goTolangParser.OPEN_BRACK)
            else:
                return self.getToken(goTolangParser.OPEN_BRACK, i)

        def CLOSE_BRACK(self, i: int = None):
            if i is None:
                return self.getTokens(goTolangParser.CLOSE_BRACK)
            else:
                return self.getToken(goTolangParser.CLOSE_BRACK, i)

        def AT(self, i: int = None):
            if i is None:
                return self.getTokens(goTolangParser.AT)
            else:
                return self.getToken(goTolangParser.AT, i)

        def DECORATOR(self, i: int = None):
            if i is None:
                return self.getTokens(goTolangParser.DECORATOR)
            else:
                return self.getToken(goTolangParser.DECORATOR, i)

        def file_input_no_eof(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(goTolangParser.File_input_no_eofContext)
            else:
                return self.getTypedRuleContext(goTolangParser.File_input_no_eofContext, i)

        def getRuleIndex(self):
            return goTolangParser.RULE_file_input_no_eof

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFile_input_no_eof"):
                listener.enterFile_input_no_eof(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFile_input_no_eof"):
                listener.exitFile_input_no_eof(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFile_input_no_eof"):
                return visitor.visitFile_input_no_eof(self)
            else:
                return visitor.visitChildren(self)

    def file_input_no_eof(self):

        localctx = goTolangParser.File_input_no_eofContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_file_input_no_eof)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            _alt = 1
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 98
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
                    if la_ == 1:
                        self.state = 83
                        self.match(goTolangParser.NEWLINE)
                        pass

                    elif la_ == 2:
                        self.state = 84
                        self.stmt()
                        pass

                    elif la_ == 3:
                        self.state = 88
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la == 58:
                            self.state = 85
                            self.match(goTolangParser.AT)
                            self.state = 86
                            self.match(goTolangParser.DECORATOR)
                            self.state = 87
                            self.match(goTolangParser.NEWLINE)

                        self.state = 90
                        self.match(goTolangParser.OPEN_BRACK)
                        self.state = 92
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 91
                            self.file_input_no_eof()
                            self.state = 94
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 867154590715534118) != 0):
                                break

                        self.state = 96
                        self.match(goTolangParser.CLOSE_BRACK)
                        pass



                else:
                    raise NoViableAltException(self)
                self.state = 100
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 3, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(goTolangParser.Simple_stmtContext, 0)

        def if_stmt(self):
            return self.getTypedRuleContext(goTolangParser.If_stmtContext, 0)

        def getRuleIndex(self):
            return goTolangParser.RULE_stmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStmt"):
                listener.enterStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStmt"):
                listener.exitStmt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStmt"):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)

    def stmt(self):

        localctx = goTolangParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 5, 8, 9, 11, 12, 14, 15, 20, 21, 23, 31, 32, 39, 46, 47, 51, 59]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.simple_stmt()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.if_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def small_stmt(self):
            return self.getTypedRuleContext(goTolangParser.Small_stmtContext, 0)

        def NEWLINE(self):
            return self.getToken(goTolangParser.NEWLINE, 0)

        def getRuleIndex(self):
            return goTolangParser.RULE_simple_stmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSimple_stmt"):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSimple_stmt"):
                listener.exitSimple_stmt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSimple_stmt"):
                return visitor.visitSimple_stmt(self)
            else:
                return visitor.visitChildren(self)

    def simple_stmt(self):

        localctx = goTolangParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_simple_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.small_stmt()
            self.state = 107
            self.match(goTolangParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Small_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return goTolangParser.RULE_small_stmt

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class BpassContext(Small_stmtContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a goTolangParser.Small_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def pass_stmt(self):
            return self.getTypedRuleContext(goTolangParser.Pass_stmtContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBpass"):
                listener.enterBpass(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBpass"):
                listener.exitBpass(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBpass"):
                return visitor.visitBpass(self)
            else:
                return visitor.visitChildren(self)

    class BexprContext(Small_stmtContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a goTolangParser.Small_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr_stmt(self):
            return self.getTypedRuleContext(goTolangParser.Expr_stmtContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBexpr"):
                listener.enterBexpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBexpr"):
                listener.exitBexpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBexpr"):
                return visitor.visitBexpr(self)
            else:
                return visitor.visitChildren(self)

    class BgotoContext(Small_stmtContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a goTolangParser.Small_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def goto_stmt(self):
            return self.getTypedRuleContext(goTolangParser.Goto_stmtContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBgoto"):
                listener.enterBgoto(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBgoto"):
                listener.exitBgoto(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBgoto"):
                return visitor.visitBgoto(self)
            else:
                return visitor.visitChildren(self)

    class BgobackContext(Small_stmtContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a goTolangParser.Small_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def goback_stmt(self):
            return self.getTypedRuleContext(goTolangParser.Goback_stmtContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBgoback"):
                listener.enterBgoback(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBgoback"):
                listener.exitBgoback(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBgoback"):
                return visitor.visitBgoback(self)
            else:
                return visitor.visitChildren(self)

    class BlabelContext(Small_stmtContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a goTolangParser.Small_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def label_stmt(self):
            return self.getTypedRuleContext(goTolangParser.Label_stmtContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBlabel"):
                listener.enterBlabel(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBlabel"):
                listener.exitBlabel(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBlabel"):
                return visitor.visitBlabel(self)
            else:
                return visitor.visitChildren(self)

    def small_stmt(self):

        localctx = goTolangParser.Small_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_small_stmt)
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8, 9, 11, 12, 14, 15, 20, 23, 31, 32, 39, 46, 47, 51]:
                localctx = goTolangParser.BexprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.expr_stmt()
                pass
            elif token in [21]:
                localctx = goTolangParser.BpassContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.pass_stmt()
                pass
            elif token in [5]:
                localctx = goTolangParser.BgobackContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.goback_stmt()
                pass
            elif token in [1, 2]:
                localctx = goTolangParser.BgotoContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 112
                self.goto_stmt()
                pass
            elif token in [59]:
                localctx = goTolangParser.BlabelContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 113
                self.label_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Goto_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return goTolangParser.RULE_goto_stmt

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class BtoContext(Goto_stmtContext):
